# RLE-Compressor

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  RleFile.cpp  RleFile.h
RleCompressor/: CMakeLists.txt  RleData.cpp  RleData.h  RleFile.cpp  RleFile.h
Tests/: CMakeLists.txt  Main.cpp  Tests.cpp  Tests.hpp
data/: Rumba Dancing.dae  Rumba Dancing.dae.rle
